# WebScraper

./: README.md  pyproject.toml  pysen.toml  results.csv
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
src/: main.py
tests/: test.py
webscript/: __init__.py
