# pyproject.toml
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "WebScraper"
version = "0.1.0"
description = "Control web browser with selenium"
authors = ["Yohei Namiki <yohei.namiki@mediee.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
selenium = "^4.18.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pysen = "^0.10.4"
pandas = "^2.0.2"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]