[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "poetryPlaywright"
version = "0.1.0"
description = "E2E test and Scraping with poetry and playwright"
authors = ["Yohei Namiki <yohei.namiki@mediee.jp>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
playwright = "^1.49.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pysen = "^0.10.4"
pytest = "^8.3.4"
